<resources>

    <string name="app_name">Group Expense Manager</string>
    <string name="head">Group Expense Manager</string>
    <string name="main1">Group Expense</string>
    <string name="main2">Manager</string>
    <string name="loading">Loading</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Group Expense Manager</string>
    <string name="grpname">Group Name</string>
    <string name="name1">Member</string>
    <string name="me">Me</string>
    <string name="add">Add Member</string>
    <string name="done">Done</string>
    <string name="desc">A Minus Icon</string>
    <string name="desc2">An Edit Icon</string>
    <string name="desc3">An Icon</string>
    <string name="title_activity_groups">Group Expense Manager</string>
    <string name="existing_groups">Existing Groups</string>
    <string name="add_group">Add Group</string>
    <string name="title_activity_new_group">New Group</string>
    <string name="blank"></string>
    <string name="title_activity_group_summary">Summary</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="test">Test</string>
    <string name="name">Member Name</string>
    <string name="spent">Spent</string>
    <string name="consumed">Consumed</string>
    <string name="topay">To Pay</string>
    <string name="toget">To Get</string>
    <string name="addevent">Add Event</string>
    <string name="cashtransfer">Cash Transfer</string>
    <string name="title_activity_cash_transfer">Cash Transfer</string>
    <string name="amount">Amount</string>
    <string name="solution">Solution</string>
    <string name="history">History</string>
    <string name="nullify">Nullify</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_possible_solution">Possible Solution</string>
    <string name="done_button1">Done</string>
    <string name="title_activity_events">Events</string>
    <string name="done_button2">Done</string>
    <string name="add_button">Add another</string>
    <string name="share_button">Share</string>
    <string name="paid">Paid</string>
    <string name="nextButton">Next</string>
    <string name="eventname">Event Name</string>
    <string name="addButton">Add</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="consumption">Consumption</string>
    <string name="payment">Payment</string>
    <string name="title_activity_edit_group">Edit</string>
	<string name="groupsummaryname">Name</string>
</resources>