<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222222"
    android:orientation="vertical" >

  

    <TextView
        android:id="@+id/amountView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="28dp"
        android:paddingLeft="0dp"
        android:paddingRight="30dp"
        android:text="@string/amount"
        android:textColor="#F2F5A9"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/paidView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/amountView2"
        android:layout_alignBottom="@+id/amountView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:paddingBottom="5dp"
        android:paddingLeft="30dp"
        android:paddingRight="0dp"
        android:paddingTop="5dp"
        android:text="@string/paid"
        android:textColor="#F2F5A9"
        android:textSize="30dp" />

    <Spinner
        android:id="@+id/memberSpinner"
        style="@style/spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/paidView1"
        android:layout_below="@+id/paidView1"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/amountText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/memberSpinner"
        android:layout_alignBottom="@+id/memberSpinner"
        android:layout_alignLeft="@+id/amountView2"
        android:ems="5"
        android:inputType="number" />
   
          

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountText1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:text="@string/nextButton" />

    <Button
        android:id="@+id/addbutton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nextbutton"
        android:layout_alignBottom="@+id/nextbutton"
        android:layout_alignRight="@+id/memberSpinner"
        android:onClick="addMember"
        android:text="@string/addButton" />

    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/memberSpinner"
        android:layout_above="@+id/nextbutton"
        android:layout_marginTop="60dp"
        android:background="#222222" >

       
    </TableLayout>

</RelativeLayout>