<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="15dp"
        android:text="@string/grpname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#F2F5A9" />

    <ImageButton
        android:id="@+id/editButton"
        style="@style/EditButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/desc"
        android:onClick="removeMember"
        android:visibility="gone" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:text="@string/addevent" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="160dp"
        android:text="@string/cashtransfer"
        android:onClick="cashTransfer" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/topay"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView6"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/toget"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/nameText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:text="@string/test"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/payText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText1"
        android:layout_alignBottom="@+id/nameText1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="30dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/getText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText1"
        android:layout_alignBottom="@+id/nameText1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="30dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    
    <TextView
        android:id="@+id/nameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText1"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/test"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/payText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText2"
        android:layout_alignBottom="@+id/nameText2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="20dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/getText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText2"
        android:layout_alignBottom="@+id/nameText2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="30dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    
    <TextView
        android:id="@+id/nameText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/test"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/payText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText3"
        android:layout_alignBottom="@+id/nameText3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="20dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/getText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText3"
        android:layout_alignBottom="@+id/nameText3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="30dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    
    <TextView
        android:id="@+id/nameText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText3"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/test"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/payText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText4"
        android:layout_alignBottom="@+id/nameText4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="20dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/getText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText4"
        android:layout_alignBottom="@+id/nameText4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="30dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    
    <TextView
        android:id="@+id/nameText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText4"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:text="@string/test"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/payText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText5"
        android:layout_alignBottom="@+id/nameText5"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="20dp"
        android:text="@string/test"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/getText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameText5"
        android:layout_alignBottom="@+id/nameText5"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="30dp"
        android:text="@string/test"
        android:textColor="#ffffff" />


</RelativeLayout>
